chore: fix text alignment in the scrolled navbar

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -260,6 +260,7 @@ section {
 		var(--logoTextToNav)
 	);
 	font-size: 12px;
+  margin-left: 5px;
 	transition: transform 1.2s, font-size 1.2s;
 }
 
